--- a/backend/package.json
+++ b/backend/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/rosscarnegie/openai-assistant-template/issues"
   },
-  "homepage": "https://github.com/rosscarnegie/openai-assistant-template#readme"
+  "homepage": "https://github.com/rosscarnegie/openai-assistant-template#readme",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
