added script templates

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "description": "An open source template for building openAI assistants that can be used in a proprietary context",
   "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "echo \"Error: no run script specified\" && exit 1",
+    "compile":  "echo \"Error: no compiled script specified\" && exit 1",
+    "debug": "echo \"Error: no debug script specified\" && exit 1"
   },
   "repository": {
     "type": "git",
